--- a/equipo2/package.json
+++ b/equipo2/package.json
@@ -6,8 +6,10 @@
     "@emotion/core": "^10.3.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/styles": "^4.11.4",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
+    "@mui/styles": "^5.3.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
